--- a/templates/enquiry.html
+++ b/templates/enquiry.html
@@ -1,6 +1,10 @@
 <div class="bar bar-header bar-light headerlogo1">
-    <span>ENQUIRY</span>
-    <img src="img/headerlogo.png" />
+   <div class="col col-75">
+       <span>ENQUIRY</span>
+   </div>
+   <div class="col">
+       <img src="img/headerlogo.png" />
+   </div>    
 </div>
 
 <form name="enquiryform" class="enquiry" novalidate form-manager>
