--- a/templates/home.html
+++ b/templates/home.html
@@ -1,7 +1,14 @@
-<div class="logo">
-    <img src="img/logo1.png" />
+<div class="headerlogo1">
+    <img src="img/headerlogo.png" />
 </div>
 
-<div class="bar bar-footer foot">
-    <img src="img/f-logo.png" />
+<div class="row frontpage">
+    <div class="col col-33 col-offset-33">
+        <a href="#/app/enquiry"><img src="img/enquiry.png" /></a>
+        <p>ENQUIRY</p>
+        <a href="#/app/testdrive"><img src="img/testdrive.png" /></a>
+        <p>TEST DRIVE</p>
+        <a href="#/app/serviceappointment"><img src="img/service.png" /></a>
+        <p>SERVICE APPOINTMENT</p>
+    </div>
 </div>
