--- a/templates/serviceappointment.html
+++ b/templates/serviceappointment.html
@@ -1,6 +1,10 @@
 <div class="bar bar-header bar-light headerlogo">
-    <span>SERVICE APPOINTMENT</span>
-    <img src="img/headerlogo.png" />
+   <div class="col col-75">
+       <span>SERVICE APPOINTMENT</span>
+   </div>
+   <div class="col">
+       <img src="img/headerlogo.png" />
+   </div>
 </div>
 
 <div class="list list-inset enquiry">
