--- a/css/style.css
+++ b/css/style.css
@@ -7,62 +7,74 @@
     margin-left: 60%;
 }
 .headerlogo img {
-    margin-left: 90%;
+    /* margin-left: 90%; */
     height: 40px;
     width: auto;
+    position: absolute;
+    right: 0px;
+    /* margin-left: 90%; */
+    height: 40px;
+    width: auto;
+    position: absolute;
+    right: 0px;
+    top: 2px;
 }
 .headerlogo1 img {
-    margin-left: 90%;
     height: 40px;
     width: auto;
+    position: absolute;
+    right: 0px;
+    top: 2px;
 }
 .frontpage img {
-    margin-left: 35%;
-    height: 110px;
+    margin: 0 auto;
+    height: 75px;
     width: auto;
+    /* margin-left: auto; */
+    display: block;
+    /* margin-right: auto; */
 }
 .frontpage p {
-    text-align: center;
     font-family: 'Verdana';
-    font-size: 20px;
-    line-height: 30px;
-    margin-bottom: 20px;
-    margin-top: 5px;
+    font-size: 11px;
+    line-height: 40px;
+    /* margin-bottom: 20px; */
+    /* margin-top: 5px; */
+    text-align: center;
     font-weight: bold;
+    width: 100%;
+}
+.input-label {
+    font-style: italic;
+    font-size: 13px;
+}
+.span.input-label {
+    font-style: italic;
+    font-size: 13px;
 }
 .headerlogo span {
     text-align: left;
     font-family: 'Verdana';
-    font-size: 18px;
+    font-size: 12px;
     color: #4ba82e;
     margin-top: 6px;
     font-weight: bold;
-    margin-left: 5px;
-    margin-right: -150px;
+    width: 100%;
 }
 .headerlogo1 span {
     text-align: left;
     font-family: 'Verdana';
-    font-size: 18px;
+    font-size: 12px;
     color: #4ba82e;
     margin-top: 6px;
     font-weight: bold;
-    margin-left: 5px;
-    margin-right: -30px;
+    width: 100%;
 }
 .enquiry {
     margin-top: 60px;
 }
 .enquiry label {
     background-color: #f5f5f5;
-}
-span.input-label {
-    font-style: italic;
-    font-size: 15px;
-}
-.input-label {
-    font-style: italic;
-    font-size: 15px;
 }
 .enquiry .list {
     margin-bottom: -1px;
@@ -71,16 +83,17 @@ span.input-label {
     background: #f5f5f5;
 }
 .footbutton button {
-    margin: 0 auto;
+    margin: 35px auto 0;
     display: block;
-    margin-top: 10px;
+    /* margin-top: 10px; */
     color: #fff;
     background-color: #4ba82e;
     font-family: 'Open Sans';
-    font-size: 20px;
+    font-size: 16px;
     border-radius: 9px;
-    padding-left: 25px;
-    padding-right: 25px;
+    /* padding-left: 25px; */
+    /* padding-right: 25px; */
+    padding: 0px 20px;
 }
 .item+.item {
     border-top-width: 1px !important;
