--- a/css/style.css
+++ b/css/style.css
@@ -83,16 +83,13 @@
     background: #f5f5f5;
 }
 .footbutton button {
-    margin: 35px auto 0;
+    margin: 35px auto 0 !important;
     display: block;
-    /* margin-top: 10px; */
     color: #fff;
     background-color: #4ba82e;
     font-family: 'Open Sans';
     font-size: 16px;
     border-radius: 9px;
-    /* padding-left: 25px; */
-    /* padding-right: 25px; */
     padding: 0px 20px;
 }
 .item+.item {
