--- a/templates/home.html
+++ b/templates/home.html
@@ -2,8 +2,8 @@
     <img src="img/headerlogo.png" />
 </div>
 
-<div class="row frontpage">
-    <div class="col col-33 col-offset-33">
+<div class="frontpage">
+    <div class="">
         <a href="#/app/enquiry"><img src="img/enquiry.png" /></a>
         <p>ENQUIRY</p>
         <a href="#/app/testdrive"><img src="img/testdrive.png" /></a>
