--- a/css/style.css
+++ b/css/style.css
@@ -82,16 +82,17 @@
 .list select {
     background: #f5f5f5;
 }
-.footbutton button {
-    margin: 35px 0 0;
-    display: block;
+.footbutton {
     text-align: center;
+}
+.footbutton button {
     color: #fff;
     background-color: #4ba82e;
     font-family: 'Open Sans';
     font-size: 16px;
     border-radius: 9px;
     padding: 0px 20px;
+    margin-top: 35px;
 }
 .item+.item {
     border-top-width: 1px !important;
