--- a/css/style.css
+++ b/css/style.css
@@ -83,16 +83,16 @@
     background: #f5f5f5;
 }
 .footbutton {
-    text-align: center;
+    text-align: center !important;
 }
 .footbutton button {
     color: #fff;
     background-color: #4ba82e;
-    font-family: 'Open Sans';
     font-size: 16px;
     border-radius: 9px;
     padding: 0px 20px;
     margin-top: 35px;
+    display: inline;
 }
 .item+.item {
     border-top-width: 1px !important;
