--- a/css/style.css
+++ b/css/style.css
@@ -57,7 +57,7 @@
     font-family: 'Verdana';
     font-size: 12px;
     color: #4ba82e;
-    margin-top: 6px;
+    margin-top: 10px;
     font-weight: bold;
     width: 100%;
 }
@@ -88,6 +88,7 @@
 .footbutton button {
     color: #fff;
     background-color: #4ba82e;
+    font-family: 'Open Sans';
     font-size: 16px;
     border-radius: 9px;
     padding: 0px 20px;
